Correct icon alignment

--- a/wwwroot/css/general.css
+++ b/wwwroot/css/general.css
@@ -3,14 +3,19 @@
   src: url("../font/Inter-VariableFont_opsz,wght.ttf");
 }
 
+body {
+  background-color: #f2f2f6;
+}
+
 .page-header-icon {
   width: 3rem;
   height: 3rem;
 }
 
 .link-icon {
-  width: 1.7rem;
-  height: 1.7rem;
+  width: 32px;
+  height: 32px;
+  margin-top: 0.15rem;
 }
 
 .link-column {
